--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,14 @@ services:
       - '8080:8080'
       - '8443:8443'
       - '50000:50000'
-    # volumes:
-      # - jenkins_data:/jenkins_config
-      # - jenkins_data:/var/lib/jenkins
-      # - /usr/bin/docker:/usr/bin/docker
-      # - /var/run/docker.sock:/var/run/docker.sock
-      # - /usr/lib/libltdl.so.7:/usr/lib/libltdl.so.7.3.1
-      # /var/jenkins_home/secrets/initialAdminPassword
     environment:
       JENKINS_URL: http://localhost:8080/
+      JENKINS_HOME: /var/lib/jenkins/
       DOCKER_HOST: tcp://proxy1:2375
+    volumes:
+      - jenkins_data:/var/lib/jenkins
+      # - /var/run/docker.sock:/var/run/docker.sock
+      # cmd: echo ${JENKINS_HOME}/secrets/initialAdminPassword
     restart: unless-stopped
     networks:
       - jenkins-net
