--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,22 @@ version: '2'
 
 services:
 
+  jenkins_podman:
+    container_name: jenkins_podman
+    build:
+        context: .
+        dockerfile: podman.Dockerfile
+    ports:
+      - '8081:8080'
+#     - '8443:8443'
+      - '50001:50000'
+    environment:
+      JENKINS_URL: http://localhost:8080/
+      JENKINS_HOME: /var/lib/jenkins/
+    restart: unless-stopped
+    networks:
+      - jenkins-net
+
   jenkins:
     container_name: jenkins
     build:
