--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,6 @@ version: '2'
 
 services:
 
-  jenkins_podman:
-    container_name: jenkins_podman
-    build:
-        context: .
-        dockerfile: podman.Dockerfile
-    ports:
-      - '8081:8080'
-#     - '8443:8443'
-      - '50001:50000'
-    environment:
-      JENKINS_URL: http://localhost:8080/
-      JENKINS_HOME: /var/lib/jenkins/
-    restart: unless-stopped
-    networks:
-      - jenkins-net
-
   jenkins:
     container_name: jenkins
     build:
@@ -27,7 +11,7 @@ services:
 #     - '8443:8443'
       - '50000:50000'
     environment:
-      JENKINS_URL: http://localhost:8080/
+      JENKINS_URL: http://localhost:8080/jenkins/
       JENKINS_HOME: /var/lib/jenkins/
       DOCKER_HOST: tcp://proxy1:2375
     volumes:
@@ -49,8 +33,43 @@ services:
         aliases:
           - proxy1
 
+  registry:
+    container_name: registry
+    restart: unless-stopped
+    image: registry:2
+    ports:
+      - 5000:5000
+    # environment:
+      # REGISTRY_HTTP_TLS_CERTIFICATE: /certs/domain.crt
+      # REGISTRY_HTTP_TLS_KEY: /certs/domain.key
+      # REGISTRY_AUTH: htpasswd
+      # REGISTRY_AUTH_HTPASSWD_PATH: /auth/htpasswd
+      # REGISTRY_AUTH_HTPASSWD_REALM: Registry Realm
+    volumes:
+      - registry_data:/var/lib/registry
+      # - ./certs:/certs
+      # - ./auth:/auth
+
+  nginx:
+    container_name: reverse_proxy
+    image: nginx
+    ports:
+      - "80:80"
+    networks:
+    - jenkins-net
+    depends_on:
+      - jenkins
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/jenkins.conf:/etc/nginx/conf.d/jenkins.conf:ro
+
+
 volumes:
+
   jenkins_data:
+    driver: local
+
+  registry_data:
     driver: local
 
 networks:
